# todo-clean-api

./: .env.example  .gitignore  Dockerfile  LICENSE  pyproject.toml
app/core/: config.py
app/domain/: exceptions.py
app/domain/entities/: task.py
app/domain/repositories/: i_task_repository.py
app/domain/value_objects/: priority.py  status.py
